[gd_scene load_steps=8 format=3 uid="uid://brbw53301pmai"]

[ext_resource type="Script" path="res://Dialogue/dialogue_handler.gd" id="1_cq4hi"]
[ext_resource type="Theme" uid="uid://iio8g86nc5cm" path="res://Themes/main_theme.tres" id="2_206ip"]
[ext_resource type="Texture2D" uid="uid://t2pxo0kx3qss" path="res://Dialogue/Dialogue Art/dialogue border image big.png" id="3_nb1md"]
[ext_resource type="Texture2D" uid="uid://vj2qfcbwp4te" path="res://Dialogue/Dialogue Art/next dark.png" id="4_61brb"]
[ext_resource type="Texture2D" uid="uid://hsure08tvhkd" path="res://Dialogue/Dialogue Art/next light.png" id="5_mbrav"]

[sub_resource type="InputEventKey" id="InputEventKey_6l7kg"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_spsvy"]
events = [SubResource("InputEventKey_6l7kg")]

[node name="DialogueHandler" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_206ip")
script = ExtResource("1_cq4hi")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("3_nb1md")
patch_margin_left = 19
patch_margin_top = 21
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Speaker" type="RichTextLabel" parent="MarginContainer2/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 9.0
offset_right = 26.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_206ip")
text = "Name here"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/NinePatchRect/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Dialogue" type="RichTextLabel" parent="MarginContainer2/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_206ip")
theme_override_font_sizes/normal_font_size = 32
text = "The full body of conversation text goes here 
"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressOnce" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1196.0
offset_top = 221.0
offset_right = 1250.0
offset_bottom = 275.0
shortcut = SubResource("Shortcut_spsvy")
texture_normal = ExtResource("4_61brb")
texture_pressed = ExtResource("5_mbrav")
texture_hover = ExtResource("5_mbrav")
ignore_texture_size = true
stretch_mode = 0

[node name="PageTurn" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
[connection signal="pressed" from="ProgressOnce" to="." method="_on_progress_once_pressed"]
